--- a/styles.css
+++ b/styles.css
@@ -233,7 +233,7 @@ blockquote p:last-child {
   
   #menu .now {
     background: #eee;
-    color: crimson;
+    color: #d44950;
   }
   
   #menu a {
