--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+.spacer { display:block; height:0.8em; }
 
 ul li img.flag-icon {
   display: inline-block;
@@ -40,7 +41,8 @@ ul {
 html,
 body {
     margin: 0;
-    padding: 0
+    padding: 0;
+    padding-top: 40px;
 }
 
 html {
@@ -52,13 +54,15 @@ html {
 @media (min-width: 54rem) {
     html {
         color: blue;
-        font-size: 17px !important
+        /* font-size: 17px !important */
+        font-size: 16px !important
     }
 }
 
 body {
     color: #515151;
-    background-color: #fff;
+    /* background-color: #fff; */
+    background-color: #f9f7f5;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%
 }
@@ -244,14 +248,31 @@ blockquote p:last-child {
 
 
 #menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: #e8dfd7; /* màu nền giống ảnh mẫu */
+    border-bottom: 1px solid #ddd;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+}
+
+
+/* #menu {
     display: table;
     width: 100%;
     margin-bottom: 30px;
     border-top: 1px solid #999;
     border-bottom: 1px solid #999;
-  }
+} */
   
   #menu div {
+    /* margin: 0 20px; */
     display: table-cell;
     width: 20%;
     text-align: center;
@@ -929,7 +950,9 @@ header {
 }
 
 .container {
-    max-width: 53rem;
+    width: 848px;
+    /* min-width: 53rem; */
+    /* max-width: 53rem; */
     padding-left: 1.5rem;
     padding-right: 1.5rem;
     margin-top: 5rem;
