--- a/styles.css
+++ b/styles.css
@@ -252,14 +252,15 @@ blockquote p:last-child {
     top: 0;
     left: 0;
     width: 100%;
-    background: #e8dfd7; /* màu nền giống ảnh mẫu */
+    background: #e8dfd7;
     border-bottom: 1px solid #ddd;
     z-index: 1000;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    height: 45px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    gap: 16px;
 }
 
 
@@ -271,34 +272,35 @@ blockquote p:last-child {
     border-bottom: 1px solid #999;
 } */
   
-  #menu div {
+#menu div {
     /* margin: 0 20px; */
     display: table-cell;
-    width: 20%;
+    /* width: 20%; */
     text-align: center;
     vertical-align: middle;
     font-weight: 500;
     color: #333;
-  }
+}
   
-  #menu div:hover {
+#menu div:hover {
     background: #ddd;
-  }
+}
   
-  #menu .now {
-    background: #eee;
-    color: #d44950;
-  }
+#menu .now {
+    /* background: #eee; */
+    /* color: #d44950; */
+    color: Chocolate
+}
   
-  #menu a {
+#menu a {
     display: block;
-    padding: 5px 0 5px 0;
+    padding: 3px 0 3px 0;
     color: inherit;
-  }
+}
   
-  #menu a:hover {
+#menu a:hover {
     text-decoration: none;
-  }
+}
 
 .message {
     margin-bottom: 1rem;
