--- a/styles.css
+++ b/styles.css
@@ -256,21 +256,14 @@ blockquote p:last-child {
     border-bottom: 1px solid #ddd;
     z-index: 1000;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    justify-content: flex-start;
+    padding: 0 0 0 450px;
     align-items: center;
     height: 45px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.04);
     gap: 16px;
 }
-
-
-/* #menu {
-    display: table;
-    width: 100%;
-    margin-bottom: 30px;
-    border-top: 1px solid #999;
-    border-bottom: 1px solid #999;
-} */
   
 #menu div {
     /* margin: 0 20px; */
