--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ body {
 
 html {
     font-family: "PT Serif", serif;
+    /* font-family: "Inter", sans-serif; */
     font-size: 16px;
     line-height: 1.5
 }
@@ -89,9 +90,11 @@ html {
 }
 
 body {
-    color: #515151;
+    /* color: #515151; */
+    color: #333333;
     /* background-color: #fff; */
     background-color: #f9f7f5;
+    /* background-color: white; */
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%
 }
